--- a/chirp/public/signup.html
+++ b/chirp/public/signup.html
@@ -1,3 +1,4 @@
+<!-- Unused -->
  <div>
 	<form class="form-auth" ng-submit="register()">
 		<h2>Register</h2>
@@ -7,5 +8,3 @@
 		<p class="text-warning">{{error_message}}</p>
 	</form>
 </div>
-
-
